--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
 			"Sendmail\\Tests\\": "tests/"
 		}
 	},
+	"suggest": {
+		"ext-runkit": "For using the runkit API."
+	},
 	"require" : {
 		"php": ">=5.3.0"
 	}
