--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,34 @@
 {
-	"name": "gribanov/sendmail",
-	"license": "MIT",
-	"type": "library",
-	"description": "Library for send mail",
-	"homepage": "https://github.com/peter-gribanov/sendmail",
-	"authors" : [
-		{
-			"name": "Peter Gribanov",
-			"email": "info@peter-gribanov.ru"
-		}
-	],
-	"autoload" : {
-		"psr-4" : {
-			"Sendmail\\": "src/"
-		}
-	},
-	"autoload-dev" : {
-		"psr-4" : {
-			"Sendmail\\Tests\\": "tests/"
-		}
-	},
-	"suggest": {
-		"ext-runkit": "For using the runkit API."
-	},
-	"require" : {
-		"php": ">=5.3.0"
-	}
+    "name": "gribanov/sendmail",
+    "license": "MIT",
+    "type": "library",
+    "description": "Library for send mail",
+    "homepage": "https://github.com/peter-gribanov/sendmail",
+    "authors" : [
+        {
+            "name": "Peter Gribanov",
+            "email": "info@peter-gribanov.ru"
+        }
+    ],
+    "autoload" : {
+        "psr-4" : {
+            "Sendmail\\": "src/"
+        }
+    },
+    "autoload-dev" : {
+        "psr-4" : {
+            "Sendmail\\Tests\\": "tests/"
+        }
+    },
+    "suggest": {
+        "ext-runkit": "For using the runkit API in tests."
+    },
+    "require" : {
+        "php": ">=5.3.0"
+    }
+    "require-dev": {
+        "phpunit/phpunit": "~4.8",
+        "scrutinizer/ocular": "~1.3",
+        "satooshi/php-coveralls": "^1.0"
+    }
 }
