--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,32 @@
 language: php
 
-php:
-    - 5.3
-    - 5.4
-    - 5.5
-    - 5.6
+sudo: false
+
+notifications:
+    email: deploy@peter-gribanov.ru
 
 os:
     - linux
     - osx
 
+branches:
+  except:
+    - /^analysis-.*$/
+
 matrix:
+    fast_finish: true
+    include:
+        - php: 7.2
+        - php: 7.1
+        - php: 7.0
+        - php: 5.6
+        - php: 5.5
+        - php: 5.4
+        - php: 5.3.3
     allow_failures:
       - os: osx
 
-notifications:
-    email: info@peter-gribanov.ru
-
-install:
-    - composer self-update
-    - composer --version
-    - composer install --prefer-dist
+before_install:
     - git clone --depth=1 git://github.com/zenovich/runkit.git
     - cd runkit
     - phpize
@@ -30,9 +36,12 @@ install:
     - cd ../
     - phpenv config-add tests/travis.runkit.ini
 
+before_script:
+    - composer install --prefer-dist --no-interaction --no-scripts --no-progress
+
 script:
-    - phpunit --verbose --coverage-clover=coverage.clover
+    - vendor/bin/phpunit --coverage-clover build/coverage-clover.xml
 
 after_script:
-    - wget https://scrutinizer-ci.com/ocular.phar
-    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+    - vendor/bin/ocular code-coverage:upload --format=php-clover build/coverage-clover.xml
+    - vendor/bin/coveralls -v -c .coveralls.yml
