--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ matrix:
         - php: 5.6
         - php: 5.5
         - php: 5.4
-        - php: 5.3.3
+        - php: 5.3
+          dist: precise
     allow_failures:
       - os: osx
 
