--- a/.travis.yml
+++ b/.travis.yml
@@ -24,20 +24,23 @@ matrix:
         - php: 5.4
         - php: 5.3
           dist: precise
+        - php: 5.4
+          env: RUNKIT=1
+        - php: hhvm
+          sudo: required
+          dist: trusty
+          group: edge
     allow_failures:
       - os: osx
 
 before_install:
-    - git clone --depth=1 git://github.com/zenovich/runkit.git
-    - cd runkit
-    - phpize
-    - ./configure
-    - make
-    - make install
-    - cd ../
-    - phpenv config-add tests/travis.runkit.ini
+    - if [ "$TRAVIS_PHP_VERSION" = "hhvm" ]; then echo 'xdebug.enable = on' >> /etc/hhvm/php.ini; fi
+    - if [ -n "$GH_TOKEN" ]; then composer config github-oauth.github.com ${GH_TOKEN}; fi;
 
 before_script:
+    - if [ "$RUNKIT" = "1" ]; then git clone --depth=1 git://github.com/zenovich/runkit.git; fi;
+    - if [ "$RUNKIT" = "1" ]; then cd runkit && phpize && ./configure && make && make install && cd ../; fi;
+    - if [ "$RUNKIT" = "1" ]; then phpenv config-add tests/travis.runkit.ini; fi;
     - composer install --prefer-dist --no-interaction --no-scripts --no-progress
 
 script:
